test/good/loops/for01.px

for a in 1..0 do
    print false
i = 0
for i in 3..6 do
    if i % 4 > 0 do
        print i
for j in i..3 step -2 do
    print j
