test/bad/loops/for14.px

for t in 1..2, 3..4, 5..6 step 1, -1 do
    skip
